--- a/templates/account/manage/profile.html
+++ b/templates/account/manage/profile.html
@@ -59,7 +59,7 @@
                                 </tr>
                             </thead>
                         </table>
-                        <a href="/space/easy/" class="list-group-item bg-primary">
+                        <a href="/space/{{space.name}}/" class="list-group-item bg-primary">
                             <h5 style="margin: 0px; color:white; text-align: center;">Dashboard</h5>
                         </a>
                         <br><br>
