--- a/static/css/space/product/update.css
+++ b/static/css/space/product/update.css
@@ -1,14 +1,14 @@
 .product-avatar-select {
-	width: 50px; height: auto;
+	width: 50px; height: 50px;
 }
 .product-avatar{
 	width: auto; height: auto;
-	max-width: 500px;
+	max-width: 400px;
 	position: relative;
 }
 
 .product-avatar img {
-	width: 100%; height: auto;
+	width: 100%; height: auto;  max-height: 400px;
 }
 .image-text-block {
 	position: absolute;
