--- a/templates/account/manage/product_react_list.html
+++ b/templates/account/manage/product_react_list.html
@@ -9,7 +9,7 @@
 {% block extra_content %}
     
     <div class="d-flex justify-content-center align-items-center">
-        <div class="col-md-6">
+        <div class="col-md-8">
             <h5 style="text-align: center;" class="list-group-item list-group-item-dark">
                 Your reacts on products
             </h5>
@@ -56,9 +56,12 @@
                 }
             }
 
-            handleTimestamp(uid){
-                const date = new Date(parseInt(uid));
-                return date.toLocaleString();
+            handleTimestamp(unix_time){
+                try{
+                    return new Date(parseInt(unixtime)).toLocaleString()
+                }catch(err){
+                    return new Date().toLocaleString()
+                }
             }
 
             getProductLink(product){
@@ -75,7 +78,7 @@
                             <tr>
                                 <td><a href={this.getProductLink(item.product)}>{item.product}</a></td>
                                 <td>{this.handleReact(item.react)}</td>
-                                <td>{this.handleTimestamp(item.uid)}</td>
+                                <td>{this.handleTimestamp(item.unix_time)}</td>
                             </tr>
                         );
                     this.setState({
