--- a/templates/space/product/update.html
+++ b/templates/space/product/update.html
@@ -13,59 +13,40 @@
     	<div class="col-md-8">
     		<div class="media-block list-group-item">
 	            <ul class="nav nav-tabs" role="tablist">
-	                <li class="nav-item">
-	                    <a class="nav-link active" data-toggle="pill" href="#img1">
-	                        <img class="product-avatar-select" src="{{ media.0.location }}">
-	                    </a>
-	                </li>
-	                 <li class="nav-item">
-	                    <a class="nav-link" data-toggle="pill" href="#img2">
-	                        <img class="product-avatar-select" src="{{ media.1.location }}">
-	                    </a>
-	                </li>
-	                 <li class="nav-item">
-	                    <a class="nav-link" data-toggle="pill" href="#img3">
-	                        <img class="product-avatar-select" src="{{ media.2.location }}">
-	                    </a>
-	                </li>
+	                {% for item in media %}
+                        <li class="nav-item">
+                            {% if forloop.first %}
+                            <a class="nav-link active" data-toggle="pill" href="#img{{forloop.counter}}">
+                            {% else %}
+                            <a class="nav-link" data-toggle="pill" href="#img{{forloop.counter}}">
+                            {% endif %}
+                                <img class="product-avatar-select" src="{{ item.location }}">
+                            </a>
+                        </li>
+                    {% endfor %}
 	            </ul>
 
 	          <!-- Tab panes -->
 	            <div class="tab-content">
-	                <div id="img1" class="container tab-pane active product-avatar">
-	                    <img src="{{ media.0.location }}">
-	                    <form method="POST" enctype="multipart/form-data" action="{{media.0.uid}}/">
-	                    	{% csrf_token %}
-	                    	<label class="image-text-block" for="image0">
-	                            <h6>Select Image 2</h6>
-	                        </label>
-	                        <input type="file" accept=".png, .jpeg, .jpg" name="image" id="image0" class="d-none">
-	                        <button class="btn btn-primary btn-block" type="submit">Upload Selected Image</button>
-	                    </form>
-	                </div>
-	                <div id="img2" class="container tab-pane product-avatar">
-	                    <img src="{{ media.1.location }}">
-	                    <form method="POST" enctype="multipart/form-data" action="{{media.1.uid}}/">
-	                    	{% csrf_token %}
-	                    	<label class="image-text-block" for="image1">
-	                            <h6>Select Image 2</h6>
-	                        </label>
-	                        <input type="file" accept=".png, .jpeg, .jpg" name="image" id="image1" class="d-none">
-	                        <button class="btn btn-primary btn-block" type="submit">Upload Selected Image</button>
-	                    </form>
-	                    
-	                </div>
-	                <div id="img3" class="container tab-pane product-avatar">
-	                    <img src="{{ media.2.location }}">
-	                    <form method="POST" enctype="multipart/form-data" action="{{media.2.uid}}/">
-	                    	{% csrf_token %}
-	                    	<label class="image-text-block" for="image2">
-	                            <h6>Select Image 2</h6>
-	                        </label>
-	                        <input type="file" accept=".png, .jpeg, .jpg" name="image" id="image2" class="d-none">
-	                        <button class="btn btn-primary btn-block" type="submit">Upload Selected Image</button>
-	                    </form>
-	                </div>
+
+	            	{% for item in media %}
+	            		{% if forloop.first %}
+	            		<div id="img{{forloop.counter}}" class="container tab-pane active product-avatar">
+	            		{% else %}
+	            		<div id="img{{forloop.counter}}" class="container tab-pane product-avatar">
+	            		{% endif %}
+
+		                    <img src="{{ item.location }}">
+		                    <form method="POST" enctype="multipart/form-data" action="{{ item.uid }}/">
+		                    	{% csrf_token %}
+		                    	<label class="image-text-block" for="image{{forloop.counter}}">
+		                            <h6>Select Image</h6>
+		                        </label>
+		                        <input type="file" accept=".png, .jpeg, .jpg" name="image" id="image{{forloop.counter}}" class="d-none">
+		                        <button class="btn btn-primary btn-block" type="submit">Upload Selected Image</button>
+		                    </form>
+		                </div>
+	            	{% endfor %}
 	            </div>
 	        </div>
 	        <br>
